Fix some ugly spacing issues

--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -16,8 +16,8 @@ body {
 .profile-userpic img {
   float: none;
   margin: 0 auto;
-  width: 90%;
-  height: 90%;
+  width: 75%;
+  height: 75%;
   -webkit-border-radius: 50% !important;
   -moz-border-radius: 50% !important;
   border-radius: 5% !important;
